# Solana-Arbitrage-Product

./: .gitignore  COMPREHENSIVE_REVIEW_RESULTS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  GAP_ANALYSIS_REPORT.md  LESSONS_LEARNED.md  PRD.md  README.md  REVIEW_CHANGE_TRACKING.md  check_output.txt  clippy_log.txt  docker-compose.yml  progress.txt
config/: solend_reserves.json  trading_config.json
crates/api/: Cargo.toml
crates/api/src/: main.rs  ws.rs
crates/bot/: Cargo.toml  test_history.jsonl
crates/bot/src/: alerts.rs  config_manager.rs  execution.rs  flash_loan_tx_builder.rs  lib.rs  main.rs  safety_checks.rs  solend_config.rs  wallet.rs
crates/bot/src/api/: metrics.rs
crates/bot/src/metrics/: prometheus.rs
crates/bot/tests/: integration_tests.rs  scenario_tests.rs
crates/core/: Cargo.toml
crates/core/benches/: trading_benchmarks.rs
crates/core/src/: audit_log.rs  config.rs  error.rs  events.rs  flash_loan.rs  history.rs  lib.rs  pathfinder.rs  rate_limiter.rs  risk.rs  secrets.rs
crates/core/src/alt/: manager.rs
crates/core/src/cache/: mmap_cache.rs
crates/core/src/database/: timescale.rs
crates/core/src/dex/: jupiter.rs  mod.rs  orca.rs  raydium.rs
crates/core/src/jito/: client.rs
crates/core/src/parsers/: fast_json.rs
crates/core/src/pathfinding/: simd_profit.rs
crates/core/src/pricing/: hybrid_fetcher.rs  parallel_fetcher.rs
crates/core/src/risk/: circuit_breaker.rs  var.rs
crates/core/src/streaming/: mod.rs  ws_manager.rs
crates/dex-plugins/src/: lifinity.rs  meteora.rs  phoenix.rs
crates/flash-loans/src/: lib.rs  safety.rs  solend.rs
crates/strategies/: Cargo.toml
crates/strategies/src/: latency.rs  lib.rs  plugin.rs  statistical.rs
dashboard/: Dockerfile  nginx.conf
dashboard/src/: App.tsx  api.ts  types.ts
dashboard/src/components/: SimulationBanner.css  SimulationBanner.tsx
docs/: DEPLOYMENT_CHECKLIST.md  EASY_TUTORIAL.md  INTERNALS.md  TROUBLESHOOTING.md  architecture.md  dry-run-log.txt  monitoring.md  presentation-report.md  readable_logs.md  runbook.md  security.md
scripts/: validate_100.ps1
