[workspace]
members = [
    "crates/core",
    # "crates/collector", - DISABLED to fix build conflict
    "crates/api",
    "crates/bot",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Solana Arb Team"]
license = "MIT"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization — pinned to >=1.0.228 to align serde_core with bitflags 2.10
serde = { version = ">=1.0.228", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Decimal math for financial calculations
rust_decimal = { version = "1", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async traits
async-trait = "0.1"

# Database - default-features=false and NO MACROS to avoid pulling mysql/sqlite
# sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "chrono", "rust_decimal"], default-features = false }

# HTTP client
reqwest = { version = "0.11", features = ["json", "native-tls-vendored", "blocking"], default-features = false }

# WebSocket - using native-tls to avoid rustls/zeroize conflict with Solana SDK
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "streams"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# Solana SDK  
solana-sdk = "1.18"
solana-rpc-client = "1.18"
solana-rpc-client-api = "1.18"
bs58 = "0.5"
