[package]
name = "solana-arb-strategies"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-arb-core = { path = "../core" }
solana-arb-dex-plugins = { path = "../dex-plugins" }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1", features = ["v4"] }

